@@ -251,13 +251,13 @@ $dictionary = array
 	159 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst Express 500-24PC'),
 	160 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst Express 500-24TT'),
 	161 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst Express 500G-12TC'),
-	162 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-48TT'),
-	163 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24TC'),
-	164 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24TT'),
-	165 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-8TC'),
-	166 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-48TC'),
-	167 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-24TC'),
-	168 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-8TC'),
+// 1572 duplicated 162 later, so 162 isn't here any more
+// 1710 duplicated 163 later, so 163 isn't here any more
+	164 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24TT-L'),
+	165 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-8TC-L'),
+	166 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-48TC-L'),
+	167 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-24TC-L'),
+	168 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-8TC-L'),
 	169 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 3560-24TS'),
 	170 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 3560-48TS'),
 	171 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 3560-24PS'),
@@ -466,7 +466,7 @@ $dictionary = array
 	376 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 3750-24TE-M'),
 	377 => array ('chapter_id' => 12, 'dict_value' => '[[Cisco%GPASS%Catalyst 4948-10GE | http://www.cisco.com/en/US/products/ps6230/index.html]]'),
 	378 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%ME 4924-10GE'),
-	379 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24'),
+	379 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24-S'),
 	380 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2950-24'),
 	381 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2950-12'),
 	382 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2950C-24'),
@@ -1431,7 +1431,7 @@ $dictionary = array
 	1344 => array ('chapter_id' => 12, 'dict_value' => 'Huawei%GPASS%S5324TP-PWR-SI'),
 	1345 => array ('chapter_id' => 12, 'dict_value' => 'Huawei%GPASS%S5348TP-SI'),
 	1346 => array ('chapter_id' => 12, 'dict_value' => 'Huawei%GPASS%S5348TP-PWR-SI'),
-	1347 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960G-24PC'),
+	1347 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24PC-L'),
 	1348 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2350-48TD'),
 	1349 => array ('chapter_id' => 12, 'dict_value' => 'HP ProCurve%GPASS%E2910-48G J9147A'),
 	1350 => array ('chapter_id' => 14, 'dict_value' => 'ExtremeXOS 10'),
@@ -1977,6 +1977,13 @@ $dictionary = array
 	1891 => array ('chapter_id' => 12, 'dict_value' => '[[Fortinet%GPASS%Fortigate 3140B| http://www.fortinet.com/products/fortigate/3140B.html'),
 	1892 => array ('chapter_id' => 12, 'dict_value' => '[[Fortinet%GPASS%Fortigate 300C | http://www.fortinet.com/products/fortigate/300C.html'), 
 	1893 => array ('chapter_id' => 12, 'dict_value' => '[[Fortinet%GPASS%Fortigate 800C | http://www.fortinet.com/products/fortigate/800C.html'),
+	1894 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24TC-S'),
+	1895 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24LT-L'),
+	1896 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-48PST-S'),
+	1897 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24PC-S'),
+	1898 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-24LC-S'),
+	1899 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960-8TC-S'),
+	1900 => array ('chapter_id' => 12, 'dict_value' => 'Cisco%GPASS%Catalyst 2960PD-8TT-L'),
 
 # Any new "default" dictionary records must go above this line (i.e., with
 # dict_key code less, than 50000). This is necessary to keep AUTO_INCREMENT
