@@ -2,6 +2,7 @@
 	bugfix: %GPASS% dictionary markers were ignored in selectboxes
 	bugfix: 802.1Q: better Force10 switches support
 	bugfix: racks, vs, rspools were displayed in search results even if user had no permissions to view them
+	bugfix: some dictionary items of Cisco Catalyst 2960 switches were renamed to meet official Cisco classification (refer the release notes)
 	update: vlan search results now include binded IP networks
 	update: make scaled rack thumb images sharp again
 	new feature: configurable top-to-bottom units order in particular racks (#601)
